src/App.css
#root {
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
  max-width: 1200px;
}

/* App */
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
}

.main-body {
  display: flex;
  justify-content: space-between;
  height: 100vh;
}

/* Search Bar */
.search-bar {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}

.search-bar input {
  width: 10rem;
  padding: 0.5rem 3rem 0.5rem 1rem;
  border-radius: 10px;
  z-index: 3;
}

.search-bar input:focus {
  outline: 1px white solid;
  border: none;
}

.modal-overlay {
  display: flex;
  z-index: 2;
  text-align: left;
  position: absolute;
  justify-self: center;
}

.modal-content {
  background: black;
  padding: 2rem;
  border-radius: 10px;
  width: 10rem;
}

/* Post */
.main-posts {
  max-width: 800px;

  width: 60%;
}

.post {
  background-color: lightgray;
  color: black;
  border-radius: 10px;
  padding: 2rem;
  margin-bottom: 20px;

  text-align: left;
  display: flex;
  flex-direction: column;

  padding-right: 80px;
}

.post-button {
  padding: 0;
  margin-bottom: 20px;
}

.post:hover {
  background-color: rgb(234, 234, 234);
}

.post-header {
  display: flex;
}

.post-header p {
  margin-right: 10px;
}

.post-time {
  color: gray;
  display: none;
}

.post-without-sub {
  display: flex;
}

.post-voting {
  display: flex;
  flex-direction: column;
  align-items: center;
  align-self: flex-start;
  margin-right: 2rem;
  width: 10%;
}

.voting-button {
  display: flex;
}

.up-vote {
  height: 20px;
  width: 20px;
  padding: 0 0;
  display: flex;
  justify-content: center;
  height: 16px;
}

.up-vote-complete {
  height: 20px;
  width: 20px;
  padding: 0 0;
  display: flex;
  justify-content: center;
  height: 16px;
  background-color: blue;
}

.down-vote {
  height: 20px;
  width: 20px;
  padding: 0 0;
  display: flex;
  justify-content: center;
  height: 16px;
}

.down-vote-complete {
  height: 20px;
  width: 20px;
  padding: 0 0;
  display: flex;
  justify-content: center;
  height: 16px;
  background-color: red;
}

.post-name h3 {
  margin: 0 0;
  margin-bottom: 10px;
}

.post-body {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.post-image {
  width: 80%;
}

.post-details {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.post-details .time-ago {
  font-style: italic;
  color: gray;
}
.comment-button {
  max-width: 120px;
}

/* Full Post */
.full-post-voting {
  display: flex;
  flex-direction: row;
  align-items: center;
  align-self: flex-start;
  width: 10%;
}

.full-likes-count {
  color: black;
  padding: 0 10px;
}

.comment-input-container {
  margin-bottom: 20px;
  border: solid rgb(165, 165, 165) 1px;
  border-radius: 20px;
  padding: .5rem;
}

.comment-input-container form {
  display: flex;
  align-items: center;
  justify-self: center;
}

.comment-input-container textarea {
  border: none;
  background-color: transparent;
  width: 700px;
  font-size: 1rem;
  font-family: Arial, Helvetica, sans-serif;
  resize: none;
  field-sizing: content;
}

.comment-input-container textarea:focus {
  outline: none;
}

.comment-input-container button {
  margin-left: 10px;
}

/* Comment */
.full-comment-voting {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-self: flex-end;
}

.comment-likes-count {
  color: rgb(165, 165, 165);
  padding: 0 10px;
}


/* Comments */
.post-comment {
  background-color: rgb(29, 29, 29);
  color: rgb(255, 255, 255);
  border-radius: 10px;
  padding: 2rem;
  text-align: left;
  margin-bottom: 10px;
}

.comment-header {
  display: flex;
  align-items: center;
  font-size: .8rem;
  color: lightgray;
}

.user-icon {
  height: 50px;
  width: 50px;
}
.user-icon img{
  height: 40px;
  border-radius: 100px;
}

/* Replies */
.comment-reply {
  background-color: rgb(29, 29, 29);
  color: rgb(255, 255, 255);
  border-radius: 10px;
  text-align: left;
  padding: 2rem 0 2rem 2rem;
}

.reply-header {
  display: flex;
  align-items: center;
  font-size: .8rem;
  color: lightgray;
}

.reply-divider {
  border-left: solid rgb(53, 53, 53) 2px;
  
}

.comment-details {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.comment-details .reply-button {
  margin: 0 10px 0 10px;
}

.reply-input-container {
  border: grey 1px solid;
  border-radius: 10px;
  padding: 1rem;
  margin-bottom: 10px;
}

.reply-input-container textarea {
  border: none;
  background-color: transparent;
  width: 700px;
  font-size: 1rem;
  font-family: Arial, Helvetica, sans-serif;
  resize: none;
  field-sizing: content;
  margin-bottom: 10px;
}

.reply-input-container textarea:focus {
  outline: none;
}

.reply-input-buttons {
  justify-self: end;
}

.comment-reply-button {
  background-color: green;
  margin: 0 10px 0 10px;
}



/* SubReddits */
.active-subreddit {
  color: white;
  background-color: #242424;
  width: 250px;
  text-align: left;
  border-radius: 10px;
}

.active-subreddit p {
  padding: 0 2rem;
}
.sub-reddits li {
  list-style: none;
}
.sub-reddits {
  background-color: black;
  border-radius: 10px;
  width: 250px;
  max-height: 1200px;
  padding: 2rem;
  margin-right: 2rem;
  display: flex;
  flex-direction: column;
  overflow: scroll;
  align-items: start;
}

.sub-reddit {
  display: flex;
  flex-direction: row;
  align-items: center;
  color: white;
}

.sub-reddit img {
  height: 35px;
  border-radius: 100%;
  background-color: white;
  border: 1px solid orangered;
  margin-right: 5px;
}

.sub-reddits button {
  background: transparent;
  color: black;
  outline: none;
  padding: 0 0;
}
/* Responsive */

@media only screen and (max-width: 960px) {
  .search-bar {
    position: relative;
    left: 0%;
    transform: translateX(0%);
  }
}

@media only screen and (max-width: 880px) {
  .sub-reddits {
    display: none;
  }

  .main-body {
    justify-content: center;
  }

  .main-posts {
    width: 90%;
  }
}

@media only screen and (max-width: 630px) {
  #root {
    padding-left: 0;
    padding-right: 0;
  }
  .header {
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 20px;
  }
  .header h1 {
    margin: 10px 0;
    font-size: 2rem;
  }

  .search-bar input {
    width: 20px;
    border-radius: 100%;
  }

  .main-posts {
    width: 100%;
  }
}

@media only screen and (max-width: 400px) {
  .post-time {
    display: block;
  }
  .post-voting p {
    display: none;
  }
  .post-voting {
    flex-direction: row;
    position: absolute;
    transform: translateY(145px);
  }
  .post-voting button {
    margin: 0 5px;
  }

  .post-details {
    justify-content: right;
  }
  .post-details p {
    display: none;
  }

  .comment-button {
    font-size: 0;
    height: 30px;
    width: 30px;
    border-radius: 100%;
  }
}

